C++/include/Swelio.h


BOOL WINAPI StartEngine();
void WINAPI StopEngine();
BOOL WINAPI SelectReader(int readerNumber);
BOOL WINAPI SelectReaderByNameW(LPWSTR readerName);
BOOL WINAPI SavePhotoAsJpegExW(int readerNumber, LPWSTR fileName);
BOOL WINAPI SavePhotoAsBitmapExW(int readerNumber, LPWSTR fileName);
BOOL WINAPI ReadPhotoEx(int readerNumber, PeidPicture photo);
BOOL WINAPI ReadIdentityExW(int readerNumber, PEidIdentityW identity);
BOOL WINAPI ReadAddressExW(int readerNumber, PEidAddressW address);
BOOL WINAPI VerifyPinExW(int readerNumber, LPWSTR value);
BOOL WINAPI SavePersonToCsvExW(int readerNumber, LPWSTR fileName);
BOOL WINAPI SavePersonToCsvExA(int readerNumber, LPSTR fileName);
BOOL WINAPI SaveCardToXmlExW(int readerNumber, LPWSTR fileName);
BOOL WINAPI SaveCardToXmlExA(int readerNumber, LPSTR fileName);
BOOL WINAPI VerifySignature(PEidCertificate certificate, BYTE* buffer, int bufferSize, BYTE* signature, DWORD signatureSize);
void WINAPI SetCallback(CALLBACK_HANDLER callback, LPVOID userContext);
void WINAPI RemoveCallback();
void WINAPI ReloadReadersList();
void WINAPI SaveAuthenticationCertificateExW(LPWSTR fileName, int readerNumber);
void WINAPI SaveNonRepudiationCertificateExW(LPWSTR fileName, int readerNumber);
void WINAPI SaveCaCertificateExW(LPWSTR fileName, int readerNumber);
void WINAPI SaveRootCaCertificateExW(LPWSTR fileName, int readerNumber);
void WINAPI SaveRrnCertificateExW(LPWSTR fileName, int readerNumber);
BOOL WINAPI SaveCardToToXMLStreamExW(int readerNumber, void* buffer);
BOOL WINAPI SaveCardToToXMLStreamExA(int readerNumber, void* buffer);
int WINAPI GetCardBufferSize(void* buffer);
void WINAPI GetCardBufferA(void* buffer, void* strDest, int count);
void WINAPI GetCardBufferW(void* buffer, void* strDest, int count);
void WINAPI DeleteCardBuffer(void* buffer);
void* WINAPI CreateCardBuffer();
BOOL WINAPI SavePersonCsvToStreamW(int readerNumber, void* buffer);
BOOL WINAPI GetCardSerialNumber(int readerNumber,  BYTE* serialNumber, LPDWORD serialNumberSize);
void WINAPI IgnoreServiceEvents(BOOL value);
void WINAPI IgnoreHardwareEvents(BOOL value);
#define SelectReaderByName SelectReaderByNameW
#define SavePhotoAsJpegEx SavePhotoAsJpegExW
#define ReadIdentityEx ReadIdentityExW
#define ReadAddressEx ReadAddressExW
#define SavePhotoAsBitmapEx SavePhotoAsBitmapExW
#define SavePersonToCsvEx SavePersonToCsvExW
#define SaveCardToXmlEx SaveCardToXmlExW
#define VerifyPinEx VerifyPinExW
#define SelectReaderByName SelectReaderByNameA
#define SavePhotoAsJpegEx SavePhotoAsJpegExA
#define ReadIdentityEx ReadIdentityExA
#define ReadAddressEx ReadAddressExA
#define SavePhotoAsBitmapEx SavePhotoAsBitmapExA
#define SavePersonToCsvEx SavePersonToCsvExA
#define SaveCardToXmlEx SaveCardToXmlExA
#define VerifyPinEx VerifyPinExA