C++/include/FileOperations.h

 
void WINAPI ShellCopyFileW(LPWSTR oldName, LPWSTR newName);
void WINAPI StripFileNameW(LPCWSTR fileName, LPWSTR fullName);
#define ShellCopyFile			ShellCopyFileW
#define StripFileName			StripFileNameW
#define ShellCopyFile			ShellCopyFileA
#define StripFileName			StripFileNameA