C++/include/SystemInfo.h


BOOL WINAPI PortAvailable(int port);