Swelio.Engine/Swelio.Engine/NativeMethods.cs


        [DllImport(DLL_FILE_NAME, EntryPoint = "PortAvailable", CallingConvention = CallingConvention.StdCall, CharSet = CharSet.Unicode)]
        [return: MarshalAs(UnmanagedType.Bool)]
        public static extern bool PortAvailable(int portNumber);

        [DllImport(DLL_FILE_NAME, EntryPoint = "GetCardSerialNumber", CallingConvention = CallingConvention.StdCall, CharSet = CharSet.Unicode)]
        [return: MarshalAs(UnmanagedType.Bool)]
        public static extern bool GetCardSerialNumber(int readerNumber, byte[] serialNumber, ref int serialNumberSize);

        [DllImport(DLL_FILE_NAME, EntryPoint = "ReadAddressExW", CallingConvention = CallingConvention.StdCall, CharSet = CharSet.Unicode)]
        [return: MarshalAs(UnmanagedType.Bool)]
        public static extern bool ReadAddressEx(int readerNumber, [In, Out] EIDAddress address);

        [DllImport(DLL_FILE_NAME, EntryPoint = "ReadIdentityExW", CallingConvention = CallingConvention.StdCall, CharSet = CharSet.Unicode)]
        [return: MarshalAs(UnmanagedType.Bool)]
        public static extern bool ReadIdentityEx(int readerNumber, [In, Out] EIDIdentity identity);

        [DllImport(DLL_FILE_NAME, EntryPoint = "ReadPhotoEx", CallingConvention = CallingConvention.StdCall, CharSet = CharSet.Unicode)]
        [return: MarshalAs(UnmanagedType.Bool)]
        public static extern bool ReadPhotoEx(int readerNumber, [In, Out] EIDPicture Photo);

        [DllImport(DLL_FILE_NAME, EntryPoint = "ReloadReadersList", CallingConvention = CallingConvention.StdCall, CharSet = CharSet.Unicode)]
        public static extern void ReloadReadersList();

        [DllImport(DLL_FILE_NAME, EntryPoint = "RemoveCallback", CallingConvention = CallingConvention.StdCall, CharSet = CharSet.Unicode)]
        public static extern void RemoveCallback();

        [DllImport(DLL_FILE_NAME, EntryPoint = "IgnoreServiceEvents", CallingConvention = CallingConvention.StdCall, CharSet = CharSet.Unicode)]
        public static extern void IgnoreServiceEvents(bool value);

        [DllImport(DLL_FILE_NAME, EntryPoint = "IgnoreHardwareEvents", CallingConvention = CallingConvention.StdCall, CharSet = CharSet.Unicode)]
        public static extern void IgnoreHardwareEvents(bool value);

        [DllImport(DLL_FILE_NAME, EntryPoint = "RemoveStartupW", CallingConvention = CallingConvention.StdCall, CharSet = CharSet.Unicode)]
        public static extern void RemoveStartup([MarshalAs(UnmanagedType.LPWStr)] string AppName);

        [DllImport(DLL_FILE_NAME, EntryPoint = "SaveCardToXmlExW", CallingConvention = CallingConvention.StdCall, CharSet = CharSet.Unicode)]
        [return: MarshalAs(UnmanagedType.Bool)]
        public static extern bool SaveCardToXmlEx(int readerNumber, [MarshalAs(UnmanagedType.LPWStr)] string fileName);

        [DllImport(DLL_FILE_NAME, EntryPoint = "SavePersonToCsvExW", CallingConvention = CallingConvention.StdCall, CharSet = CharSet.Unicode)]
        [return: MarshalAs(UnmanagedType.Bool)]
        public static extern bool SavePersonToCsvEx(int readerNumber, [MarshalAs(UnmanagedType.LPWStr)] string fileName);

        [DllImport(DLL_FILE_NAME, EntryPoint = "SaveCardToXmlExA", CallingConvention = CallingConvention.StdCall, CharSet = CharSet.Ansi, BestFitMapping = false, ThrowOnUnmappableChar = true, ExactSpelling = true)]
        [return: MarshalAs(UnmanagedType.Bool)]
        public static extern bool SaveCardToXmlExAnsi(int readerNumber, [MarshalAs(UnmanagedType.LPStr)] string fileName);

        [DllImport(DLL_FILE_NAME, EntryPoint = "SavePersonToCsvExA", CallingConvention = CallingConvention.StdCall, CharSet = CharSet.Ansi, BestFitMapping = false, ThrowOnUnmappableChar = true, ExactSpelling = true)]
        [return: MarshalAs(UnmanagedType.Bool)]
        public static extern bool SavePersonToCsvExAnsi(int readerNumber, [MarshalAs(UnmanagedType.LPStr)] string fileName);

        [DllImport(DLL_FILE_NAME, EntryPoint = "SavePhotoAsBitmapExW", CallingConvention = CallingConvention.StdCall, CharSet = CharSet.Unicode)]
        [return: MarshalAs(UnmanagedType.Bool)]
        public static extern bool SavePhotoAsBitmapEx(int readerNumber, [MarshalAs(UnmanagedType.LPWStr)] string fileName);

        [DllImport(DLL_FILE_NAME, EntryPoint = "SavePhotoAsJpegExW", CallingConvention = CallingConvention.StdCall, CharSet = CharSet.Unicode)]
        [return: MarshalAs(UnmanagedType.Bool)]
        public static extern bool SavePhotoAsJpegEx(int readerNumber, [MarshalAs(UnmanagedType.LPWStr)] string fileName);

        [DllImport(DLL_FILE_NAME, EntryPoint = "SelectReader", CallingConvention = CallingConvention.StdCall, CharSet = CharSet.Unicode)]
        [return: MarshalAs(UnmanagedType.Bool)]
        public static extern bool SelectReader(int readerNumber);

        [DllImport(DLL_FILE_NAME, EntryPoint = "SelectReaderByNameW", CallingConvention = CallingConvention.StdCall, CharSet = CharSet.Unicode)]
        [return: MarshalAs(UnmanagedType.Bool)]
        public static extern bool SelectReaderByName([MarshalAs(UnmanagedType.LPWStr)] string ReaderName);

        [DllImport(DLL_FILE_NAME, EntryPoint = "SetCallback", CallingConvention = CallingConvention.StdCall, CharSet = CharSet.Unicode)]
        public static extern void SetCallback(ReaderCallbackDelegate callback, IntPtr userContext);

        [DllImport(DLL_FILE_NAME, EntryPoint = "SetStartupW", CallingConvention = CallingConvention.StdCall, CharSet = CharSet.Unicode)]
        public static extern void SetStartup([MarshalAs(UnmanagedType.LPWStr)] string AppName, [MarshalAs(UnmanagedType.LPWStr)] string AppPath);

        [DllImport(DLL_FILE_NAME, EntryPoint = "ShellCopyFileW", CallingConvention = CallingConvention.StdCall, CharSet = CharSet.Unicode)]
        public static extern void ShellCopyFile([MarshalAs(UnmanagedType.LPWStr)] string oldName, [MarshalAs(UnmanagedType.LPWStr)] string NewName);

        [DllImport(DLL_FILE_NAME, EntryPoint = "ShowError", CallingConvention = CallingConvention.StdCall, CharSet = CharSet.Unicode)]
        public static extern void ShowError(int ErrorCode);

        [DllImport(DLL_FILE_NAME, EntryPoint = "ShutdownWindows", CallingConvention = CallingConvention.StdCall, CharSet = CharSet.Unicode)]
        [return: MarshalAs(UnmanagedType.Bool)]
        public static extern bool ShutdownWindows(int Flags);

        [DllImport(DLL_FILE_NAME, EntryPoint = "StartEngine", CallingConvention = CallingConvention.StdCall, CharSet = CharSet.Unicode)]
        [return: MarshalAs(UnmanagedType.Bool)]
        public static extern bool StartEngine();

        [DllImport(DLL_FILE_NAME, EntryPoint = "StopEngine", CallingConvention = CallingConvention.StdCall, CharSet = CharSet.Unicode)]
        public static extern void StopEngine();

        [DllImport(DLL_FILE_NAME, EntryPoint = "StripFileNameW", CallingConvention = CallingConvention.StdCall, CharSet = CharSet.Unicode)]
        public static extern void StripFileName([MarshalAs(UnmanagedType.LPWStr)] string fileName, StringBuilder sb);

        [DllImport(DLL_FILE_NAME, EntryPoint = "SuspendWindows", CallingConvention = CallingConvention.StdCall, CharSet = CharSet.Unicode)]
        [return: MarshalAs(UnmanagedType.Bool)]
        public static extern bool SuspendWindows();

        [DllImport(DLL_FILE_NAME, EntryPoint = "TurnMonitorOff", CallingConvention = CallingConvention.StdCall, CharSet = CharSet.Unicode)]
        public static extern void TurnMonitorOff();

        [DllImport(DLL_FILE_NAME, EntryPoint = "TurnMonitorOn", CallingConvention = CallingConvention.StdCall, CharSet = CharSet.Unicode)]
        public static extern void TurnMonitorOn();

        [DllImport(DLL_FILE_NAME, EntryPoint = "VerifyPinExW", CallingConvention = CallingConvention.StdCall, CharSet = CharSet.Unicode)]
        [return: MarshalAs(UnmanagedType.Bool)]
        public static extern bool VerifyPinEx(int readerNumber, [MarshalAs(UnmanagedType.LPWStr)] string Value);

        [DllImport(DLL_FILE_NAME, EntryPoint = "VerifySignature", CallingConvention = CallingConvention.StdCall, CharSet = CharSet.Unicode)]
        [return: MarshalAs(UnmanagedType.Bool)]
        public static extern bool VerifySignature([In, Out] EIDCertificate Certificate, byte[] dataHash, int hashSize, byte[] signature, int signatureSize);

        [DllImport(DLL_FILE_NAME, EntryPoint = "SaveAuthenticationCertificateExW", CallingConvention = CallingConvention.StdCall, CharSet = CharSet.Unicode)]
        public static extern void SaveAuthenticationCertificateEx([MarshalAs(UnmanagedType.LPWStr)] string fileName, int readerNumber);

        [DllImport(DLL_FILE_NAME, EntryPoint = "SaveCaCertificateExW", CallingConvention = CallingConvention.StdCall, CharSet = CharSet.Unicode)]
        public static extern void SaveCaCertificateEx([MarshalAs(UnmanagedType.LPWStr)] string fileName, int readerNumber);

        [DllImport(DLL_FILE_NAME, EntryPoint = "SaveNonRepudiationCertificateExW", CallingConvention = CallingConvention.StdCall, CharSet = CharSet.Unicode)]
        public static extern void SaveNonRepudiationCertificateEx([MarshalAs(UnmanagedType.LPWStr)] string fileName, int readerNumber);

        [DllImport(DLL_FILE_NAME, EntryPoint = "SaveRootCaCertificateExW", CallingConvention = CallingConvention.StdCall, CharSet = CharSet.Unicode)]
        public static extern void SaveRootCaCertificateEx([MarshalAs(UnmanagedType.LPWStr)] string fileName, int readerNumber);

        [DllImport(DLL_FILE_NAME, EntryPoint = "SaveRrnCertificateExW", CallingConvention = CallingConvention.StdCall, CharSet = CharSet.Unicode)]
        public static extern void SaveRrnCertificateEx([MarshalAs(UnmanagedType.LPWStr)] string fileName, int readerNumber);

        [DllImport(DLL_FILE_NAME, EntryPoint = "SaveCardToToXMLStreamExW", CallingConvention = CallingConvention.StdCall, CharSet = CharSet.Unicode)]
        [return: MarshalAs(UnmanagedType.Bool)]
        public static extern bool SaveCardToToXMLStreamExW(int readerNumber, IntPtr buffer);

        [DllImport(DLL_FILE_NAME, EntryPoint = "SaveCardToToXMLStreamExA", CallingConvention = CallingConvention.StdCall, CharSet = CharSet.Ansi, BestFitMapping = false, ThrowOnUnmappableChar = true, ExactSpelling = true)]
        [return: MarshalAs(UnmanagedType.Bool)]
        public static extern bool SaveCardToToXMLStreamExA(int readerNumber, IntPtr buffer);

        [DllImport(DLL_FILE_NAME, EntryPoint = "GetCardBufferSize", CallingConvention = CallingConvention.StdCall, CharSet = CharSet.Unicode)]
        public static extern int GetCardBufferSize(IntPtr buffer);

        [DllImport(DLL_FILE_NAME, EntryPoint = "GetCardBufferA", CallingConvention = CallingConvention.StdCall, CharSet = CharSet.Ansi, BestFitMapping = false, ThrowOnUnmappableChar = true, ExactSpelling = true)]
        public static extern void GetCardBufferA(IntPtr buffer, StringBuilder strDest, int count);

        [DllImport(DLL_FILE_NAME, EntryPoint = "GetCardBufferW", CallingConvention = CallingConvention.StdCall, CharSet = CharSet.Unicode)]
        public static extern void GetCardBufferW(IntPtr buffer, StringBuilder strDest, int count);

        [DllImport(DLL_FILE_NAME, EntryPoint = "DeleteCardBuffer", CallingConvention = CallingConvention.StdCall, CharSet = CharSet.Unicode)]
        public static extern void DeleteCardBuffer(IntPtr buffer);

        [DllImport(DLL_FILE_NAME, EntryPoint = "CreateCardBuffer", CallingConvention = CallingConvention.StdCall, CharSet = CharSet.Unicode)]
        public static extern IntPtr CreateCardBuffer();

        [DllImport(DLL_FILE_NAME, EntryPoint = "SavePersonCsvToStreamW", CallingConvention = CallingConvention.StdCall, CharSet = CharSet.Unicode)]
        [return: MarshalAs(UnmanagedType.Bool)]
        public static extern bool SavePersonCsvToStreamW(int readerNumber, IntPtr buffer);
